# OptiSuite

./: .gitignore  2camera_pyqt_061625.py  DaHeng_Camera_Test.py  DaHeng_Camera_Test_winforms.py  Example.py  README.md  TODO.txt  algo_interface.py  conflict.txt  focus_algo.py  resolution_app.py  stage_motion_test_061625.py  test_model.py  usaf_algo.py  yolo_model.py
7SS Program/: 7SCU.ocx  7SS.CHM  CoolToolBar.oca  CoolToolBar.ocx  Info.ini  Sc4Parameter4.ini
7SS Program/Uninstall/: uninstall.xml
Python versions/OCS_current_workspace_052825/: 2camera_ZeroMQ_102325.py  autofocus.py  autofocus_routine.py  camera_manager_class_import_120425.py  chat_export_summary.md  integrated_camera_stage_app.py  requirements.txt  stage_routine_import_013026.py  usaf_algo.py  zmq_pull_listener.py  zmq_push_worker.py
Python versions/OCS_op/DLL/: ReadMeDLL.txt  (+1 more)
Python versions/SC3U_Headless_C++_Library_093025/: CMakeLists.txt  MainClass.cs  OCS_current_workspace_052825.sln  SC3U_Headless.cpp  SC3U_Headless.h  build_instructions.md
SC3U_stage_control/: Form1.Designer.cs  Form1.cs  MainClass.cs  NetMQPullListener.cs  Program.cs  SC3U.cs  SC3U_stage_control.csproj  UserControl1.Designer.cs  UserControl1.cs  ZmqStageEventPublisher.cs  ZmqStageServer.cs  app.config  packages.config
analyzers/: __init__.py  base.py  contrast_chart.py  grid.py  siemens.py  slanted_edge.py  usaf.py
benchmarks/: generate_benchmarks.py  manifest.json
core/: __init__.py  contrast.py  registration.py  results.py  router.py  visualization.py
demo_folder/: logs.txt
tests/: test_resolution_pipeline.py
(+94 files in other folders)
